--- a/Palvelinten-Hallinta/Log-collection-module/Vagrantfile
+++ b/Palvelinten-Hallinta/Log-collection-module/Vagrantfile
@@ -200,7 +200,7 @@ exampleenvironment.com-hosts:
 
 curl_localhost:
   cmd.run:
-    - name: curl localhost
+    - name: curl exampleenvironment.com
     - onlyif: test -f /etc/apache2/sites-enabled/exampleenvironment.com.conf
     - onchanges:
       - service: apache2_service
